# config

./: .gitignore  README.md
dotfile/: tmux.conf
dotfile/neovim/: init.lua
dotfile/neovim/lua/: lsp.lua  lspkeymaps.lua  plugins.lua  treesitter.lua  whichkey.lua
neovim/lua/: autopairs.lua  gitsign.lua  keymaps.lua  lsp.lua  options.lua  whichkey.lua
test/: CMakeLists.txt
test/cmake/: CommonConfig.cmake  FindMoldLinker.cmake
test/src/: CMakeLists.txt  main.cpp  test.cpp  test.h
